fix: go sdk incorrect pointer fields
