# go/internal/openapi/model_ordering.go
@@ -1,9 +1,10 @@
 /*
- * Pay API Documentations
+ * Pay OpenAPI Documentations
  *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ * This is a pay service api server.
  *
  * API version: 1.0
+ * Contact: support@openweb3.io
  */
 
 // Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
@@ -15,13 +16,13 @@ import (
 	"fmt"
 )
 
-// Ordering Defines the ordering in a listing of results.
+// Ordering the model 'Ordering'
 type Ordering string
 
 // List of Ordering
 const (
-	ORDERING_ASC Ordering = "asc"
-	ORDERING_DESC Ordering = "desc"
+	ORDERING_ORDERING_ASC  Ordering = "asc"
+	ORDERING_ORDERING_DESC Ordering = "desc"
 )
 
 var allowedOrderingEnumValues = []Ordering{
@@ -107,4 +108,3 @@ func (v *NullableOrdering) UnmarshalJSON(src []byte) error {
 	v.isSet = true
 	return json.Unmarshal(src, &v.value)
 }
-
